// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleGrid Renders the SimpleGrid UI snapshot correctly 1`] = `
<div
  className="css-bjq6jk"
  id="test-grid"
/>
`;

exports[`SimpleGrid Renders the SimpleGrid UI snapshot correctly 2`] = `
<div
  className="css-161u8yz"
  id="chakra"
/>
`;

exports[`SimpleGrid Renders the SimpleGrid UI snapshot correctly 3`] = `
<div
  className="css-bjq6jk"
  data-testid="props"
  id="props"
/>
`;
